# Sweet-Shop

./: .gitignore  README.md
candy-shop-ui/: index.html  package-lock.json  package.json  tailwind.config.js
candy-shop-ui/src/: App.tsx  index.css  main.tsx
candy-shop-ui/src/components/: CandyLoader.tsx  GalaxyNav.tsx  NeonSweet.tsx  PurchaseButton.tsx
candy-shop-ui/src/hooks/: useAuth.ts  useShop.ts  useSweets.ts
candy-shop-ui/src/lib/: api.ts
candy-shop-ui/src/pages/: Dashboard.tsx  Login.tsx  Register.tsx
sweet-shop-backend/: docker-compose.yml  make_admin.py  pyproject.toml  requirements.txt  test.db
sweet-shop-backend/app/: main.py  requirements.txt
sweet-shop-backend/app/api/: deps.py
sweet-shop-backend/app/api/v1/: __init__.py
sweet-shop-backend/app/api/v1/endpoints/: auth.py  sweets.py
sweet-shop-backend/app/core/: config.py  database.py  security.py
sweet-shop-backend/app/crud/: sweet.py  user.py
sweet-shop-backend/app/models/: base.py  sweet.py  user.py
sweet-shop-backend/app/schemas/: sweet.py  user.py
sweet-shop-backend/app/tests/: conftest.py
sweet-shop-backend/app/tests/test_api/: test_sweets.py
sweet-shop-backend/app/tests/test_crud/: test_sweet.py  test_user.py
sweet-shop-backend/app/tests/test_models/: test_sweet.py
